[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/item/consumable/health_potion.png" type="Texture" id=1]
[ext_resource path="res://assets/interface/intentory/item_background/type_1.png" type="Texture" id=2]
[ext_resource path="res://assets/font/bit_potion.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/interface/player/item.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 3 )

[node name="Item" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -300.0
margin_bottom = -160.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 2 )
script = ExtResource( 4 )

[node name="ItemTexture" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 1 )
expand = true

[node name="Amount" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -6.0
margin_top = -8.0
margin_right = -2.0
margin_bottom = 9.0
rect_min_size = Vector2( 4, 7 )
custom_fonts/font = SubResource( 1 )
text = "9
"
align = 2
valign = 1

[connection signal="mouse_entered" from="." to="." method="_on_Item_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Item_mouse_exited"]
